styles/scss/global.scss
@import '_variables';
@import '_mixins';

::selection {
	color: 		var(--background);
	background: var(--secondary);
}

html {
	font-size: 16px;
	font-family: var(--font-sans);

	color: var(--primary-dim);
	background: var(--background);
	
	text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
}

#__next {
	width: 100%;
    overflow-x: hidden;
}

img {
	border-radius: .5rem;
	//width: 100%;
	filter: brightness( var(--brightness-low) );

	&:hover {
		filter: brightness( var(--brightness-high) );
	}
}

button.button {
	cursor: pointer;
	font-family: var(--font-accent);
	font-size: 1rem;
	font-weight: 700;
	padding: .75rem 2.5rem;
	border-radius: 99rem;
	border: none;
	margin-right: 1rem;

	@include transition(750ms);
	&:hover {
		@include transition(750ms);
	}
}

h1 {
	font-size: var(--font-xl);
	font-family: var(--font-sans);
	font-weight: 600;
	letter-spacing: -.1rem;
}

h2 {
	color: var(--primary);
	font-size: var(--font-xl);
	font-family: var(--font-sans);
	font-weight: 700;
    letter-spacing: -.05rem;
}

h3 {
	font-size: var(--font-m);
	font-family: var(--font-sans);
	color: var(--primary);
	font-weight: 600;
	letter-spacing: -.01rem;
}

h4 {
	font-size: var(--font-xs);
	font-family: var(--font-sans);
	font-weight: 600;
	text-transform: uppercase;
	letter-spacing: .1rem;
}

h5 {
	font-size: var(--font-m);
	font-family: var(--font-sans);
	color: var(--primary);
	font-weight: 600;
	letter-spacing: -.01rem;
}

p {
	font-size: var(--font-r);
	font-family: var(--font-sans);
	line-height: 1.6;
	letter-spacing: -.02rem;

	&.subtitle {
		font-family: var(--font-accent);
		font-size: var(--font-r-s);
		font-weight: 600;
		letter-spacing: 0;
	}
}

a {
	font-weight: 600;
	color: var(--primary);

	&:hover {
		color: var(--primary-bright);

		[data-prefix="far"][data-icon="arrow-up-right-from-square"] {
			color: var(--primary);
		}

		h3 {
			color: var(--primary-bright);
		}
	}

	

	[data-prefix="far"][data-icon="arrow-up-right-from-square"] {
		height: .75rem;
		vertical-align: -1.5px;
		color: var(--primary-dim);
	}

	svg {
		margin-left: .25rem;
	}
}

.noEvents {
	pointer-events: none;
}

.list {
	list-style: disc;
	margin-left: 1.5rem;
	font-size: var(--font-r);
	font-family: var(--font-sans);
	line-height: 1.6;
	letter-spacing: -.02rem;
	li {
		&::marker {
			content: normal;
		}
	}
}

.leaveSite {
	&:after {
		content: "↗";
		position: relative;
		font-size: inherit;
		line-height: 0;
		vertical-align: -1px;
		margin-left: .5rem;
		text-decoration: none;
		text-rendering: optimizeLegibility;
		white-space: nowrap;
		font-feature-settings: "liga";
		-webkit-font-smoothing: antialiased;
	}
}

.borderBottom {
	border-bottom: 1px solid var(--primary-dark);
}

#gradient-canvas {
	position: absolute;
    z-index: -1;
	opacity: 100%;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    transform: rotate(180deg);
    aspect-ratio: auto;
    --gradient-color-1: var( --mesh-color-1 );
	--gradient-color-2: var( --mesh-color-2 );
	--gradient-color-3: var( --mesh-color-3 );
	--gradient-color-4: var( --mesh-color-4 );
}

.highlight {
	--looking-bg-1: var(--neon-1-1);
	--looking-bg-2: var(--neon-1-2);

	width: fit-content;
	background: var(--bar-gradient);
	--bar-gradient: 
		linear-gradient( 
			90deg, 
			var(--looking-bg-1) 0%, 
			var(--looking-bg-2) 100%
		);

	-webkit-background-clip: text;
	background-clip: text;
	-webkit-text-fill-color: transparent;
}
@media (max-width: 768px) {
  .skeleton {
    animation: pulse 1.5s infinite;
  }

  @keyframes pulse {
    0% { opacity: 0.6; }
    50% { opacity: 1; }
    100% { opacity: 0.6; }
  }
}

